build(server): added tsc-alias to build step to resolve aliases
